# electrical-code

./: .env.example  .gitignore  NFPA 70 NEC 2023_slim.txt  README.md  TODO.md  pyproject.toml  requirements.txt  slim.py
archive/: test_gpt_41.py
docs/: rag_design.md  retrieval_improvements_feb2026.md  retrieval_recall_analysis.md  table_ambiguity.md  table_cleaning.md
scripts/: apply_table_corrections.py  merge_corrected_tables.py  ocr.py  reconstruct_310_4_1.py  rerank_comparison.py  retrieval_recall.py  review_tables.py  slim.py  test_llm_tables.py  test_structure.py  test_tables.py
src/: ask.py  split_into_sections.py
src/embed/: embed.py  split_into_sections.py
src/nec_rag/: __init__.py
src/nec_rag/agent/: __init__.py  agent.py  loaders.py  prompts.py  resources.py  tools.py  utils.py
src/nec_rag/cleaning/: README.md  __init__.py  clean.py  hyphens_endline.py  ocr.py  remove_junk_pages.py  remove_page_furniture.py  sentence_runover.py  structure.py  tables.py
src/nec_rag/data_preprocessing/: __init__.py
src/nec_rag/data_preprocessing/embedding/: __init__.py  chunk.py  config.py  embed.py
src/nec_rag/data_preprocessing/tables/: __init__.py  classifiers.py  detection.py  formatting.py  patterns.py  pipeline.py  schema.py  tables.py
src/nec_rag/data_preprocessing/text_cleaning/: README.md  __init__.py  clean.py  hyphens_endline.py  remove_junk_pages.py  remove_page_furniture.py  sentence_runover.py  structure.py
src/nec_rag/rag/: __init__.py  ask.py  embed.py  split_into_sections.py
src/nec_rag/web/: __init__.py  __main__.py  app.py
src/nec_rag/web/static/: chat.js  index.html  style.css
src/ocr/: OCR.py
src/text_cleaning/: clean.py  hyphens_endline.py  remove_junk_pages.py  sentence_runover.py
tests/: conftest.py  test_ask.py  test_cleaning.py  test_config.py  test_embeddings.py  test_gpt_41.py  test_structure.py  test_tables_helpers.py
tests/agent/: test_ask.py  test_rag_dedup.py  test_tools.py
tests/data_preprocessing/: test_chunk.py  test_remove_page_furniture.py
tests_integration/: conftest.py  test_master_electrician_exam.py
tests_integration/agent/: test_master_electrician_exam.py
